# Cross-Kit

./: .gitignore  LICENSE  README.md
old-example/: Cargo.toml  README.md
old-example/sigsong-android/: README.md  gradle.properties  settings.gradle.kts
old-example/sigsong-android/app/: build.gradle.kts  proguard-rules.pro
old-example/sigsong-android/app/src/main/: AndroidManifest.xml
old-example/sigsong-ios/: README.md  SigSongSDK  buildServer.json
old-example/sigsong-ios/InvokeKit/: Package.swift
old-example/sigsong-ios/InvokeKit/Sources/InvokeKit/: Invoke.swift  InvokeKit.swift
old-example/sigsong-ios/InvokeKit/Tests/InvokeKitTests/: InvokeKitTests.swift
old-example/sigsong-ios/SigSong/: AppRouter.swift  AppViewModel.swift  Info.plist  NT.swift  Preview.swift  SigSongApp.swift  UserStore.swift
old-example/sigsong-ios/SigSong.xcodeproj/: project.pbxproj
old-example/sigsong-ios/SigSong.xcodeproj/xcshareddata/xcschemes/: SigSong-Release.xcscheme  SigSong.xcscheme
old-example/sigsong-ios/SigSong/NTComponent/: NTAvatar.swift  NTPresentView.swift  NTSearchBar.swift  NTSideBar.swift  NTTabView.swift  NTToast.swift
old-example/sigsong-ios/SigSong/NTFoundation/NTColor/: NTcolorStore.swift  SafeDictionary.swift
old-example/sigsong-ios/SigSong/NTFoundation/NTGesture/: FollowDragGesture.swift  Scroll.swift
old-example/sigsong-ios/SigSong/NTFoundation/NTIcon/: NTIcon.swift
old-example/sigsong-sdk/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  data.json  example.txt  qqq.json  sigsong-pb  spiral.lrc  test_song.sric
old-example/sigsong-sdk/migrations/: 20240809182240_test.sql  20241105100000_add_current_user.sql  20241105104500_word_info_structured.sql
old-example/sigsong-sdk/src/: client.rs  lib.rs  result.rs  server.rs  storage.rs  utils.rs
old-example/sigsong-sdk/src/cache/: song.rs  user.rs  word_info.rs
old-example/sigsong-sdk/src/client/: client_ability.rs  invoke.rs
old-example/sigsong-sdk/src/native/: api.rs
old-example/sigsong-sdk/src/native/api/: song.rs  (+2 more)
old-example/sigsong-sdk/src/server/: api.rs  mapping.rs  proto.rs
old-example/sigsong-sdk/src/storage/: song.rs  user.rs  word_info.rs
old-example/sigsong-sdk/src/utils/: compression.rs  nlp.rs
old-example/sigsong-sdk/tests/: full_stack.rs  login_test.rs
(+67 files in other folders)
