[workspace]
resolver = "2"
members = ["sigsong-sdk", "sigsong-server"]
default-members = ["sigsong-sdk"]

[workspace.package]
version = "0.6.9-a1"
authors = ["Catalpam"]
edition = "2024"
rust-version = "1.74.1"

[workspace.dependencies]
tokio = "1.39"
prost = "0.14"
prost-build = "0.14"
bytes = "1.6"
zstd = "0.13.3"
lazy_static = "1.5.0"
sqlx = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
